# status_panel

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/status_panel/: status_logger.h  status_panel.h
src/: status_logger.cpp  status_panel.cpp
